fix: autocomplete field dark mode (#365)

--- a/src/unfold/styles.css
+++ b/src/unfold/styles.css
@@ -276,7 +276,7 @@ h3 span:nth-child(3) {
  Autocomplete
  *******************************************************/
 .select2.select2-container {
-  @apply border max-w-2xl relative rounded-md shadow-sm !w-full dark:border-gray-700;
+  @apply bg-white border max-w-2xl relative rounded-md shadow-sm !w-full dark:bg-gray-900 dark:border-gray-700;
 }
 
 .errors .select2.select2-container {
